# crypyo-native

./: .gitignore  0-conan-install.bat  0-conan-install.sh  1-cmake-config.bat  1-cmake-config.sh  2-cmake-build.bat  2-cmake-build.sh  CMakeLists.txt  README.md  conan_bindeps.py  conanfile.py
src/: build_info.hh.in
src/termapp/: CMakeLists.txt  term_cli.cc  term_cli.hh  term_cli_cmd.cc  term_cli_cmd.hh  term_cmd_keywrap.cc  term_cmd_keywrap.hh  term_main.cc
src/util/: CMakeLists.txt  util_cc.hh
